# grc-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
grc_engine/: __init__.py  cli.py  evidence.py  patterns.py  report.py  scanner.py  scoring.py
grc_engine/data/: critical_controls.json  patterns.json
tests/: test_cli.py  test_evidence.py  test_report.py  test_scanner.py  test_scoring.py
tests/fixtures/: sample_python.py  sample_yaml.yml
