[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grc-engine"
version = "0.1.0"
description = "Regulatory compliance scoring for any codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GRC Ontology Core Team"},
]
keywords = ["compliance", "grc", "dora", "iso27001", "ai-act", "regulatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
grc = "grc_engine.cli:main"

[project.urls]
Homepage = "https://github.com/timidgit/grc-engine"
Issues = "https://github.com/timidgit/grc-engine/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["grc_engine"]
